[gd_scene load_steps=11 format=3 uid="uid://c1ytttrqo3ddw"]

[ext_resource type="Script" uid="uid://bh53qxeh46fqw" path="res://scene/main_menu/main_menu_scene.gd" id="1_houh8"]
[ext_resource type="Texture2D" uid="uid://cwf6dyi56tgo" path="res://art/tile_0088.png" id="2_okil0"]
[ext_resource type="Texture2D" uid="uid://cpydvk8mq66o5" path="res://art/tile_0087.png" id="3_rqmlp"]
[ext_resource type="Texture2D" uid="uid://dpfqok8tuy4r7" path="res://art/tile_0084.png" id="4_jao4p"]
[ext_resource type="Texture2D" uid="uid://1u3b3hwqd8yh" path="res://art/tile_0110.png" id="5_fsd5i"]
[ext_resource type="Texture2D" uid="uid://cgopx2ponr1qi" path="res://art/tile_0121.png" id="6_b7f07"]
[ext_resource type="Texture2D" uid="uid://c24y6l0ivlqp7" path="res://art/tile_0108.png" id="7_n8rv7"]

[sub_resource type="Gradient" id="Gradient_prcqd"]
colors = PackedColorArray(0.2, 0.117647, 0.0509804, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_s6uko"]
gradient = SubResource("Gradient_prcqd")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_prcqd"]
line_spacing = 10.0
font_size = 24
shadow_size = 4
shadow_color = Color(0.74, 0.74, 0.74, 0.247059)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_houh8")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_s6uko")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -64.0
offset_right = 87.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
text = "My Awesome
Roguelike Deckbuilder"
label_settings = SubResource("LabelSettings_prcqd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(60, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -1.0
offset_right = 30.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="GalleryButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Gallery"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"

[node name="PlayerCharacter" type="Node2D" parent="."]
position = Vector2(65, 105)

[node name="Sprite2D" type="Sprite2D" parent="PlayerCharacter"]
scale = Vector2(2, 2)
texture = ExtResource("2_okil0")

[node name="Sprite2D2" type="Sprite2D" parent="PlayerCharacter"]
position = Vector2(-19, 21)
scale = Vector2(2, 2)
texture = ExtResource("3_rqmlp")

[node name="Sprite2D3" type="Sprite2D" parent="PlayerCharacter"]
position = Vector2(22, 17)
scale = Vector2(2, 2)
texture = ExtResource("4_jao4p")

[node name="EnemyCharacter" type="Node2D" parent="."]
position = Vector2(252, 108)

[node name="Sprite2D" type="Sprite2D" parent="EnemyCharacter"]
scale = Vector2(2, 2)
texture = ExtResource("5_fsd5i")
flip_h = true

[node name="Sprite2D2" type="Sprite2D" parent="EnemyCharacter"]
position = Vector2(-19, 21)
scale = Vector2(2, 2)
texture = ExtResource("6_b7f07")
flip_h = true

[node name="Sprite2D3" type="Sprite2D" parent="EnemyCharacter"]
position = Vector2(22, 17)
scale = Vector2(2, 2)
texture = ExtResource("7_n8rv7")
flip_h = true
